@@ -576,20 +576,12 @@ public class SubmissionController extends DSpaceServlet
         else if (currentStepNum > FIRST_STEP)
         {
             
-            //need to find a previous step that is VISIBLE to the user!
-            while(currentStepNum>FIRST_STEP)
+            currentStepConfig = getPreviousVisibleStep(request, subInfo);
+            
+            if(currentStepConfig != null)
             {
-                // update the current step & do this previous step
-                currentStepNum--;
-            
-                //get previous step
-                currentStepConfig = subInfo.getSubmissionConfig().getStep(currentStepNum);
-            
-                if(currentStepConfig.isVisible())
-                {
-                    foundPrevious = true;
-                    break;
-                }
+                currentStepNum = currentStepConfig.getStepNumber();
+                foundPrevious = true;
             }
                 
             if(foundPrevious)
@@ -1091,7 +1083,7 @@ public class SubmissionController extends DSpaceServlet
     }
 
     /**
-     * Checks if the current step is also the first step in the item submission
+     * Checks if the current step is also the first "visibile" step in the item submission
      * process.
      * 
      * @param request
@@ -1106,7 +1098,7 @@ public class SubmissionController extends DSpaceServlet
     {
         SubmissionStepConfig step = getCurrentStepConfig(request, si);
 
-        if ((step != null) && (step.getStepNumber() == FIRST_STEP))
+        if ((step != null) && (getPreviousVisibleStep(request, si) == null))
         {
             return true;
         }
@@ -1114,6 +1106,44 @@ public class SubmissionController extends DSpaceServlet
         {
             return false;
         }
+    }
+    
+    /**
+     * Return the previous "visibile" step in the item submission
+     * process if any, <code>null</code> otherwise.
+     * 
+     * @param request
+     *            HTTP request
+     * @param si
+     *            The current Submission Info
+     * 
+     * @return the previous step in the item submission process if any
+     */
+    public static SubmissionStepConfig getPreviousVisibleStep(HttpServletRequest request,
+            SubmissionInfo si)
+    {
+        SubmissionStepConfig step = getCurrentStepConfig(request, si);
+
+        SubmissionStepConfig currentStepConfig, previousStep = null;
+
+        int currentStepNum = step.getStepNumber();
+        
+        //need to find a previous step that is VISIBLE to the user!
+        while(currentStepNum>FIRST_STEP)
+        {
+            // update the current step & do this previous step
+            currentStepNum--;
+        
+            //get previous step
+            currentStepConfig = si.getSubmissionConfig().getStep(currentStepNum);
+        
+            if(currentStepConfig.isVisible())
+            {
+                previousStep = currentStepConfig;
+                break;
+            }
+        }
+        return previousStep;
     }
 
     /**
